<resources>
    <string name="app_name">MADCapstone</string>
    <string name="title_home">Home</string>
    <string name="title_pay">Pay</string>
    <string name="title_list">Packing List</string>
    <string name="title_map">Map</string>

    <string name="pay">PAY</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="merch">Merchandise</string>
    <string name="amount">amount</string>

    <string name="add">Add</string>
    <string name="dialogTitle">Add a Store and a Amount to your total</string>
</resources>