<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
        android:id="@+id/rbFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textSize="24sp" /><RadioButton
        android:id="@+id/rbDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drinks"
        android:textSize="24sp" /><RadioButton
        android:id="@+id/rbMerch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/merch"
        android:textSize="24sp" /></RadioGroup>

    <EditText
        android:id="@+id/txt_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgStore" />

</androidx.constraintlayout.widget.ConstraintLayout>